--- a/ChiPy2-Sketching.ipynb
+++ b/ChiPy2-Sketching.ipynb
@@ -15,12 +15,12 @@
     "\n",
     "The analysis I’m conducting involves profiling and causal modeling. I want to know which data points correlate most strongly to student outcomes and AmeriCorps Member performance. I am hoping I can then build a profile of successful (or unsuccessful) AmeriCorps Members (ACMs) and use this model to recommend metrics and goals that better align to student outcomes and ACM performance. Additionaly, this analysis could help advocate to school partners for the school settings in which our AmeriCorps Members best serve students’ individualistic needs.\n",
     "\n",
+    ", but offered an excellent opportunity to practice my Python fundamentals. The solution involed tuples, dictionaries, sets, `with` control flow structure, in addition to the list and pandas dataframe types I use most often\n",
+    "\n",
     "#### Getting Data\n",
     "The first task was to get my data into Python. The majority of our data are stored on Salesforce or Excel workbooks through SharePoint. Going into this project, I had already developed Python systems for getting and writing Excel documents to SharePoint. This was accomplished through a mapped network drive to the SharePoint server, allowing me to simply navigate the file structure as a local drive.\n",
     "\n",
-    "The Salesforce component was a bit more tricky, but offered an excellent opportunity to practice my Python fundamentals. The solution involed tuples and dictionaries, in addition to the list and pandas dataframe types I use most often.\n",
-    "\n",
-    "I relied heavily on the package, `simple-salesforce`. This package allows me to query, create, and delete records, which has had a profound effect on my work pracitices. In a typical use of simple-salesforce, the user passes a traditional SOQL query into the Salesforce instance `cysh` and performs the `query_all` function.\n",
+    "The Salesforce component was a bit more tricky. I relied heavily on the package, `simple-salesforce`. This package allows me to query, create, and delete records, which has had a profound effect on my work pracitices. In a typical use of simple-salesforce, the user passes a traditional SOQL query into the Salesforce instance `cysh` and performs the `query_all` function.\n",
     "\n",
     "Here is the set-up:"
    ]
@@ -219,9 +219,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To view my current progress on getting assessment data and my next steps in shaping and analysis, view the IPython notebooks in the repository for this project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Cleaning Data\n",
-    "There are a lot of places I could start this project. I decided to start where I saw greatest opportunity: our observation and coaching data. I want to know if AmeriCorps Members who exercise best practices in tutoring are more impactful with students. This is data I had been intending to clean and aggregate, but which I put off because the 26 Excel workbooks created to track this data were not designed with aggregation in mind. The records are indexed by first names and nicknames, headers are inconsistent (and multi-indexed), and the file structure does not reflect standardized organization.\n",
+    "In my organization we employ four coaches who observe, provide feedback, and enter data for each AmeriCorps member at least once per month. If this data were cleaned and rolled together, I could determine whether the AmeriCorps Members who exercise best practices in tutoring are in fact more impactful with students (among many other interesting questions). The reason I put off this analysis is because the 26 Excel workbooks created to track coaching data were not designed with aggregation in mind. The records are indexed by first names and nicknames, headers are inconsistent (and multi-indexed), and the file structure does not reflect standardized organization.\n",
     "\n",
+    "The first task was to identify the file paths to each Excel workbook. This was accomplished using `os.walk()` to list all contents of the relevant directories. Since there are only 26 files, and the filenames are not patterned, I chose to simply copy-paste the file paths I wanted into a list.\n",
+    "\n",
+    "The next challenge was that these Excel workbooks do not contain consistent sheets. All workbooks contain months as sheet names, but some coaches split their workbook into two semesters. Instead of pandas' `pd.read_excel()`, I used `pd.ExcelFile()`. This allowed me to load the workbook, then only load the sheets whose names also exist in the set of sheets I'm interested in:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filepath in coach_xlsx_paths:\n",
+    "    with pd.ExcelFile(filepath) as xl:\n",
+    "        for sheet in list(set(xl.sheet_names) & set(sheet_months)):\n",
+    "            # Returns ordered dict\n",
+    "            heatmap = pd.read_excel(xl, header=[2,3], \n",
+    "                                    sheet_name=sheet, \n",
+    "                                    usecols=14, index_col=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To this process, I also added columns for the month (the sheet name) and the school (the directory in which the file resides). Unfortunately the school folder names were also not standardized.\n",
+    "\n",
+    "Enter `fuzzywuzzy`, a very hand package for finding and scoring text matches. I performed fuzzy matches between the folder name columns and the official school names from salesfroce: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load schools from salesforce\n",
+    "account_df = get_cysh_df('Account', ['Id', 'Name'])\n",
+    "account_df.rename(columns={'Id':'Organization__c', 'Name':'School'}, inplace=True)\n",
+    "\n",
+    "d = []\n",
+    "for folder_name in set(heatmaps_df['Folder']):\n",
+    "    match = process.extract(folder_name, set(account_df['School']), scorer=fuzz.token_set_ratio, limit=1)\n",
+    "    match = [folder_name] + [x for tup in match for x in tup]\n",
+    "    d.append(match)\n",
+    "df = pd.DataFrame(d, columns=['Folder', 'School', 'Match_Score'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "O&C data\n",
     "- fuzzywuzzy to flag names to be manually fixed\n",
     "\n",
