--- a/ChiPy2-Sketching.ipynb
+++ b/ChiPy2-Sketching.ipynb
@@ -6,21 +6,21 @@
    "source": [
     "# ChiPy Mentorship 2 of 3\n",
     "\n",
-    "Since Post 1 my project work has varied between learning data science at a high level, expanding my Python foundation, and conducting exploratory data analysis. In this post I walk through the tools I’m using and my approach to an evolving goal line.\n",
-    "\n",
     "#### Learning and Project Clarity\n",
-    "Since my last post I have been working my way through the book, Data Science for Business (thanks to my mentor Aly for the purchase). The book provides a nice balance between high level discussion and gritty nuance. Most importantly, the text provides language for speaking to my interests and experiences in analytics, and defining my the stages and scope of my project.\n",
+    "Since Post 1, my time investment in this project has varied between learning data science at a high level and expanding my Python foundation through tutorials and project work. I have been working my way through the book, Data Science for Business, which nicely balances emphasis between high level discussion and gritty nuance. Importantly, the text provides language for speaking to my interests and experiences in analytics and defining my project stages and scope.\n",
     "\n",
-    "See my previous post for information on my role as an analyst at an AmeriCorps non-profit and the data at my disposal.\n",
+    "The analysis I’m conducting involves profiling and causal modeling. I want to know which data points correlate most strongly to student outcomes and AmeriCorps Member performance (see my previous post for information on my role at an educational non-profit). I am hoping I can then build a profile of successful AmeriCorps Members (ACMs) and use this model to recommend metrics and goals that better align to student outcomes and ACM performance. Additionaly, this analysis could help advocate to school partners for the school settings in which our AmeriCorps Members best serve students’ individualistic needs.\n",
     "\n",
-    "The analysis I’m conducting involves profiling and causal modeling. I want to know which data points correlate most strongly to student outcomes and AmeriCorps Member performance. I am hoping I can then build a profile of successful (or unsuccessful) AmeriCorps Members (ACMs) and use this model to recommend metrics and goals that better align to student outcomes and ACM performance. Additionaly, this analysis could help advocate to school partners for the school settings in which our AmeriCorps Members best serve students’ individualistic needs.\n",
+    "On the technical Python side, I have gained further experience with tuples, dictionaries, sets, and `with` control flows while adding further practice to the other basic types and `pandas` techniques I already knew well. The tutorials I followed include a Exploratory Data Analysis https://github.com/cmawer/pycon-2017-eda-tutorial from PyCon, the seaborn data visualization tutorial https://seaborn.pydata.org/tutorial.html, and a little natural langauge processing http://textblob.readthedocs.io/en/dev/.\n",
     "\n",
-    ", but offered an excellent opportunity to practice my Python fundamentals. The solution involed tuples, dictionaries, sets, `with` control flow structure, in addition to the list and pandas dataframe types I use most often\n",
+    "Although these tutorials filled me with a sense of potential and accompishment, the feeling quickly faded in the absence of application. Of course, this is where the 'hard learning' occurs and meaningful progress is made. Following are two examples of the data I have processed in my project to date.\n",
     "\n",
     "#### Getting Data\n",
-    "The first task was to get my data into Python. The majority of our data are stored on Salesforce or Excel workbooks through SharePoint. Going into this project, I had already developed Python systems for getting and writing Excel documents to SharePoint. This was accomplished through a mapped network drive to the SharePoint server, allowing me to simply navigate the file structure as a local drive.\n",
+    "First I needed to get my data into Python. The majority of my data are stored on Salesforce or Excel workbooks through SharePoint.\n",
     "\n",
-    "The Salesforce component was a bit more tricky. I relied heavily on the package, `simple-salesforce`. This package allows me to query, create, and delete records, which has had a profound effect on my work pracitices. In a typical use of simple-salesforce, the user passes a traditional SOQL query into the Salesforce instance `cysh` and performs the `query_all` function.\n",
+    "Going into this project, I had already developed Python systems for getting and writing Excel documents to SharePoint. This was accomplished through a mapped network drive to the SharePoint server, allowing me to simply navigate the file structure as a local drive.\n",
+    "\n",
+    "The Salesforce component was a bit more tricky, but with a little Python elbow grease, the `simple-salesforce` package was up to the task. This package allows me to query, create, and delete records, which has had a profound effect on my work pracitices. In a typical use of simple-salesforce, the user passes a traditional SOQL query into the Salesforce instance (in this case `cysh`) and performs the `query_all` function.\n",
     "\n",
     "Here is the set-up:"
    ]
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a simple query:"
+    "A simple query, for example:"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "querystring = (f\"SELECT Id, Name FROM Assesment__c\") # note the typo in Assesment__c, which took too long to discover\n",
+    "querystring = (f\"SELECT Id, Name FROM Assesment__c\") # Note the typo in Assesment__c, which cost me a good amount of time troubleshooting\n",
     "query_return = cysh.query_all(querystring)"
    ]
   },
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In my case, I'm not working with datasets that are very large. In Chicago, we serve fewer than 3000 students, and we enlist fewer than 300 AmeriCorps Members. Therefore I can query the entire Salesforce object, `Assesment__c`, with whatever fields I'm interested in, and perform all the shaping and filtering with pandas.\n",
+    "In my case, I'm working with datasets that are not very large. In the Chicago region, we serve fewer than 3000 students and enlist fewer than 300 AmeriCorps Members. Therefore I can query the entire Salesforce object (i.e. `Assesment__c`) with whatever fields I'm interested in and perform all the shaping and filtering in Python.\n",
     "\n",
     "I added this convenient function to iterate over the query response and shape it as a dataframe:"
    ]
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To view my current progress on getting assessment data and my next steps in shaping and analysis, view the IPython notebooks in the repository for this project."
+    "In terms of assessment data, the next step will be determing student assessment progress by comparing prior year or start of year assessments to the recent winter assessment. Typically we set assessment goals fall to spring, so in this analysis I will need to calculate mid-year goals. Ideally, this analysis will also consider data from past years, but the feasbility of that is yet to be determined. To view my current progress on assessment data, view the IPython notebook in the repository for this project."
    ]
   },
   {
@@ -229,9 +229,9 @@
     "#### Cleaning Data\n",
     "In my organization we employ four coaches who observe, provide feedback, and enter data for each AmeriCorps member at least once per month. If this data were cleaned and rolled together, I could determine whether the AmeriCorps Members who exercise best practices in tutoring are in fact more impactful with students (among many other interesting questions). The reason I put off this analysis is because the 26 Excel workbooks created to track coaching data were not designed with aggregation in mind. The records are indexed by first names and nicknames, headers are inconsistent (and multi-indexed), and the file structure does not reflect standardized organization.\n",
     "\n",
-    "The first task was to identify the file paths to each Excel workbook. This was accomplished using `os.walk()` to list all contents of the relevant directories. Since there are only 26 files, and the filenames are not patterned, I chose to simply copy-paste the file paths I wanted into a list.\n",
+    "The first task was to identify the file paths to each Excel workbook. This was accomplished using `os.walk()` to list all contents of the relevant SharePoint directories. Since there are only 26 files, and the filenames are not patterned, I chose to simply copy-paste the file paths I wanted into a list.\n",
     "\n",
-    "The next challenge was that these Excel workbooks do not contain consistent sheets. All workbooks contain months as sheet names, but some coaches split their workbook into two semesters. Instead of pandas' `pd.read_excel()`, I used `pd.ExcelFile()`. This allowed me to load the workbook, then only load the sheets whose names also exist in the set of sheets I'm interested in:"
+    "The next challenge was that these Excel workbooks do not contain consistent sheets. All workbooks contain months as sheet names, but some coaches split their workbook into two semesters. Instead of pandas' `pd.read_excel()`, I used `pd.ExcelFile()`. This allowed me to load the workbook once, then only pull the sheets whose names also occur in the set of sheets I'm interested in:"
    ]
   },
   {
@@ -253,9 +253,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To this process, I also added columns for the month (the sheet name) and the school (the directory in which the file resides). Unfortunately the school folder names were also not standardized.\n",
+    "To this process, I also added columns for the month (the sheet name) and the school (the directory in which the file resides), but again the school folder names were not standardized.\n",
     "\n",
-    "Enter `fuzzywuzzy`, a very hand package for finding and scoring text matches. I performed fuzzy matches between the folder name columns and the official school names from salesfroce: "
+    "Enter `fuzzywuzzy`, a very hand package for finding and scoring text matches. I performed fuzzy matches between the folder name columns and the official school names from Salesforce like so: "
    ]
   },
   {
@@ -273,18 +273,23 @@
     "    match = process.extract(folder_name, set(account_df['School']), scorer=fuzz.token_set_ratio, limit=1)\n",
     "    match = [folder_name] + [x for tup in match for x in tup]\n",
     "    d.append(match)\n",
-    "df = pd.DataFrame(d, columns=['Folder', 'School', 'Match_Score'])"
+    "df = pd.DataFrame(d, columns=['Folder', 'School', 'Match_Score'])\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O&C data\n",
-    "- fuzzywuzzy to flag names to be manually fixed\n",
-    "\n",
+    "Using the same process, I was able to clean ACM names too. However, in this case there were several ambiguous matches, which I resolved by manually comparing names between the Excel workbook and the validated set of ACM names from Salesforce. I then fixed the mis-matched names in Excel by hand. You can also view this full process in the project repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Next Steps\n",
-    "Next I will determine student assessment progress by comparing prior year or start of year assessments to the recent winter assessment. Typically we set assessment goals fall to spring, so in this analysis I will need to calculate mid-year goals."
+    "Next in my analysis will be cleaning and combining of 2-3 more data sources. Then I will conduct exploratory data analysis, cyclically chasing my branching curiosities as they come. For example, I will experiment with various definitions of ACM success to tentatively determine which features seem worthwhile to explore further. In combination with studying data science techniques, I am optimistic that I can build a model that describes signifiers of successful novel discoveries about our programming."
    ]
   }
  ],
