--- a/_posts/2018-02-15-chipy1.md
+++ b/_posts/2018-02-15-chipy1.md
@@ -1,9 +1,9 @@
 ---
-layout: post
-author: Chris Luedtke
 title: Finding the Question
 subtitle: ChiPy Mentorship Blog 1 of 3
 header_img: /assets/images/chicago.jpg
+tags:
+- chipy-mentorship
 ---
 
 <p>Meaningful analysis begins with asking the right question for the data at hand. But this process encompasses an art form in which I am an amateur. It has been 19 days since my acceptance to the ChiPy Mentorship, I have sniff at what my ultimate project will be, and I am diving head first. In this post I walk you through my learning process and hesitation, the resources and mindset that carry me, and the project bubbling to the surface.</p>
