--- a/_posts/2018-03-15-chipy2.md
+++ b/_posts/2018-03-15-chipy2.md
@@ -1,9 +1,9 @@
 ---
-layout: post
-author: Chris Luedtke
 title: Into the Weeds
 subtitle: ChiPy Mentorship Blog 2 of 3
 header_img: /assets/images/wabash.jpg
+tags:
+- chipy-mentorship
 ---
 
 #### Ongoing Learning and Project Clarity
