--- a/_posts/2018-04-19-chipy3.md
+++ b/_posts/2018-04-19-chipy3.md
@@ -1,9 +1,9 @@
 ---
-layout: post
-author: Chris Luedtke
 title: Bait and Switch
 subtitle: ChiPy Mentorship Blog 3 of 3
 header_img: /assets/images/cloudgate.jpg
+tags:
+- chipy-mentorship
 ---
 
 <h2 id="Statistical-Learning,-Slowly">Statistical Learning, Slowly</h2>
