--- a/_posts/2018-06-14-chipy4.md
+++ b/_posts/2018-06-14-chipy4.md
@@ -1,11 +1,10 @@
 ---
-layout: post
-author: Chris Luedtke
 title: Implementing Python at an AmeriCorps Nonprofit
 subtitle: ChiPy Mentorship Finale
 header_img: /assets/images/chipy_finale.jpg
 tags:
-- Talks
+- talks
+- chipy-mentorship
 ---
 
 ## That's a Wrap!
