--- a/_posts/2019-06-06-sudoku.md
+++ b/_posts/2019-06-06-sudoku.md
@@ -1,10 +1,8 @@
 ---
-layout: default
-author: Chris Luedtke
 title: Color Sudoku Solver
 subtitle: A deep neural network trained from scratch
 forward_url: https://twitter.com/LuedaChris/status/1136670666214793216
 tags:
-- Computer Vision
-- Neural Networks
+- machine-learning
+- embedded-systems
 ---
