post tags and meta tags

--- a/_posts/2018-02-15-chipy1.md
+++ b/_posts/2018-02-15-chipy1.md
@@ -3,6 +3,7 @@ title: Finding the Question
 subtitle: ChiPy Mentorship Blog 1 of 3
 header_img: /assets/images/chicago.jpg
 tags:
+- chipy
 - chipy-mentorship
 ---
 
