--- a/_posts/2018-03-15-chipy2.md
+++ b/_posts/2018-03-15-chipy2.md
@@ -3,6 +3,7 @@ title: Into the Weeds
 subtitle: ChiPy Mentorship Blog 2 of 3
 header_img: /assets/images/wabash.jpg
 tags:
+- chipy
 - chipy-mentorship
 ---
 
