--- a/_posts/2018-04-19-chipy3.md
+++ b/_posts/2018-04-19-chipy3.md
@@ -3,6 +3,7 @@ title: Bait and Switch
 subtitle: ChiPy Mentorship Blog 3 of 3
 header_img: /assets/images/cloudgate.jpg
 tags:
+- chipy
 - chipy-mentorship
 ---
 
