--- a/_posts/2019-06-06-sudoku.md
+++ b/_posts/2019-06-06-sudoku.md
@@ -1,8 +1,9 @@
 ---
 title: Color Sudoku Solver
 subtitle: A deep neural network trained from scratch
-forward_url: https://twitter.com/LuedaChris/status/1136670666214793216
+forward_url: https://github.com/chrisluedtke/sudoku-cv#sudoku-computer-vision-solver
 tags:
 - machine-learning
 - embedded-systems
+- computer-vision
 ---
