--- a/_posts/2019-06-27-algosig5.md
+++ b/_posts/2019-06-27-algosig5.md
@@ -3,7 +3,9 @@ title: "Algorithms Interest Group #5"
 subtitle: Equidistant Points on a Line
 header_img: /assets/images/algosig.jpg
 tags:
+- chipy
 - chipy-algosig
+- algorithms
 ---
 
 As an organizer for the [Chicago Python Users Group](https://www.chipy.org/), a.k.a. "ChiPy", I co-facilitate our Algorithms Special Interest Group, a.k.a. "AlgoSIG". Participants select 1 of 3 code challenges and spend the evening honing their problem solving skills. 
