--- a/_posts/2018-06-14-chipy4.md
+++ b/_posts/2018-06-14-chipy4.md
@@ -12,4 +12,8 @@ tags:
 
 The [Chicago Python Users Group](https://www.chipy.org/) put on an amazing - and amagingly free - [mentorship](https://chipymentor.org/). With my mentor's help, I placed 3rd overall and took home a Raspberry Pi 3 B+ with a free month of DataCamp. Check out my talk below, and find other mentees' talks on the [ChiPy YouTube channel](https://www.youtube.com/channel/UCT372EAC1orBOSUd2fsA8WA/videos). Or better yet, join us at an upcoming [Meetup](https://www.meetup.com/_ChiPy_/).
 
+[Post 1]({% post_url 2018-02-15-chipy1 %})
+[Post 2]({% post_url 2018-03-15-chipy2 %})
+[Post 3]({% post_url 2018-04-19-chipy3 %})
+
 <iframe width="100%" height="480" src="https://www.youtube.com/embed/NNjPzTF3Zps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
