image updates and blog post cleanup

--- a/_posts/2019-04-11-twittoff.md
+++ b/_posts/2019-04-11-twittoff.md
@@ -1,5 +1,5 @@
 ---
-title: TwittOff
+title: "Demo: TwittOff"
 subtitle: An NLP web application to predict the Twitter author of any user-submitted text
 forward_url: https://twittoff.herokuapp.com/
 tags:
