--- a/_posts/2019-06-06-sudoku.md
+++ b/_posts/2019-06-06-sudoku.md
@@ -1,5 +1,5 @@
 ---
-title: Color Sudoku Solver
+title: "Demo: Color Sudoku Solver"
 subtitle: A deep neural network trained from scratch
 forward_url: https://github.com/chrisluedtke/sudoku-cv#sudoku-computer-vision-solver
 tags:
